[gd_scene load_steps=5 format=3 uid="uid://dsw5dmox2mg1w"]

[ext_resource type="Script" path="res://Character/NPC/npc.gd" id="1_k5yuc"]
[ext_resource type="Texture2D" uid="uid://bvj8rrosv83bb" path="res://Assets/Character Assets/NPCs/Bear Bones (enemy NPC)/Bear Bones, Enemy NPC Incombat Pose.png" id="2_2bne8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iyaqo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t0886"]

[node name="NPC" type="CharacterBody2D"]
script = ExtResource("1_k5yuc")

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_iyaqo")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.02, 0.02)
texture = ExtResource("2_2bne8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.5, 1.3)
shape = SubResource("CapsuleShape2D_t0886")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
